--- a/Sources/App/Modules/Admin/Templates/Fields/File.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/File.html
@@ -1,4 +1,4 @@
-<section class="m:b #(field.class ?? "")">
+<section class="m:bottom #(field.class ?? "")">
     <label for="#(field.id)">#(field.label ?? field.id.capitalized())</label>
     <div id="image-uploader" class="image-uploader">
         #if(field.data.value != ""):
