--- a/Sources/App/Modules/Admin/Templates/Fields/Multiselection.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/Multiselection.html
@@ -1,4 +1,4 @@
-<section class="m:b">
+<section class="m:bottom">
     <label for="#(field.id)">#(field.label ?? field.id.capitalized())</label>
     <select name="#(field.id)[]" multiple>
         #for(item in field.data.options):
