--- a/Sources/App/Modules/Admin/Templates/Fields/Text.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/Text.html
@@ -1,4 +1,4 @@
-<section class="m:b">
+<section class="m:bottom">
     <label for="#(field.id)">#(field.label ?? field.id.capitalized())#if(field.required ?? false): <span class="required">(required)</span>#endif#if(field.more ?? false): <span class="more">(#(field.more))</span>#endif</label>
     <input type="#(field.type ?? "text")" id="#(field.id)" name="#(field.id)" value="#(field.data.value)" placeholder="#(field.placeholder ?? "")" class="field">
     #if(field.data.error != nil):
