--- a/Sources/App/Modules/Admin/Templates/Form.html
+++ b/Sources/App/Modules/Admin/Templates/Form.html
@@ -2,12 +2,14 @@
     #if(edit.id != nil):Edit#else:Create#endif #(form.key)
 #enddefine
 #define(breadcrumb):
-    <li><a href="#($req.url.path.trimLast())">#(title)</a></li>
+    #if(form.list != nil):
+    <li><a href="#($req.url.path.trimLast())">#(form.list.capitalized())</a></li>
+    #endif
 #enddefine
 
 #define(body):
 <div id="form" class="wrapper w">
-    <form id="#(form.key)-edit-form" class="m:xl" method="post" action="#($req.url.path)"#if(form.multipart ?? false): enctype="multipart/form-data"#endif>
+    <form id="#(form.key)-form" class="m:xl" method="post" action="#($req.url.path)"#if(form.multipart ?? false): enctype="multipart/form-data"#endif>
         #var(field = nil)
 
         #(field = ["id": "id", "value": form.id])
