--- a/Sources/App/Modules/Admin/Templates/Home.html
+++ b/Sources/App/Modules/Admin/Templates/Home.html
@@ -5,13 +5,13 @@
 
 <div id="dashboard" class="wrapper w:full m:xl">
 
-    <header class="m:b:l center">
+    <header class="m:bottom:l center">
         <p>Welcome <b>#($user.email)</b>, this is your admin dashboard. Please select an option:</p>
     </header>
 
     <div class="g3 g:gap:l center">
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("pen-tool", class: "block w64")</span>
+            <span>#svg("book", class: "block w64")</span>
             <h3>Blog</h3>
             <ul class="lst:none p:zero">
                 <li><a href="/admin/blog/posts/">Posts</a></li>
@@ -20,28 +20,28 @@
             </ul>
         </div>
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("layout", class: "block w64")</span>
+            <span>#svg("file-text", class: "block w64")</span>
             <h3>Static</h3>
             <ul class="lst:none p:zero">
                 <li><a href="/admin/static/pages/">Pages</a></li>
             </ul>
         </div>
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("corner-up-right", class: "block w64")</span>
+            <span>#svg("arrow-right", class: "block w64")</span>
             <h3>Redirect</h3>
             <ul class="lst:none p:zero">
                 <li><a href="/admin/redirect/redirects/">Redirects</a></li>
             </ul>
         </div>
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("star", class: "block w64")</span>
+            <span>#svg("layout", class: "block w64")</span>
             <h3>Frontend</h3>
             <ul class="lst:none p:zero">
                 <li><a href="/admin/frontend/metadatas/">Metadatas</a></li>
             </ul>
         </div>
         <div class="g:col1 bg2 p:l br:s border1">
-            <span>#svg("tool", class: "block w64")</span>
+            <span>#svg("settings", class: "block w64")</span>
             <h3>System</h3>
             <ul class="lst:none p:zero">
                 <li><a href="/admin/system/variables/">Variables</a></li>
