--- a/Sources/App/Modules/Admin/Templates/Index.html
+++ b/Sources/App/Modules/Admin/Templates/Index.html
@@ -40,7 +40,7 @@
         </nav>
 
           <a id="site-link" href="/">
-              <img src="/images/logo-text.png" alt="Logo of The.Swift.Dev." title="The.Swift.Dev.">
+              <img src="/images/logo-text.png" alt="Logo of #($vars["site.title"])" title="#($vars["site.title"])">
           </a>
 
           <a id="account" href="/logout/">#svg("log-out")</a>
