--- a/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
+++ b/Sources/App/Modules/Blog/Templates/Admin/Links/Edit.html
@@ -16,6 +16,6 @@
     #inline("Admin/Fields/Text")
 
 #enddefine
-#let(title = "Links")
-#let(form = ["key": "links", "id": edit.id, "multipart": true])
+
+#let(form = ["list": "links", "key": "link", "id": edit.id, "multipart": true])
 #inline("Admin/Form")
