--- a/Sources/App/Modules/Blog/Templates/Frontend/Author.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Author.html
@@ -6,7 +6,7 @@
 
 <div id="category" class="wrapper w:full m:xl">
 
-    <header class="m:b:l center">
+    <header class="m:bottom:l center">
         <img class="w128 br:circular" src="#(author.imageKey.resolve())" alt="Picture of #(author.name)" title="#(author.name)">
         <h1>#(head.title)</h1>
         <p>#(head.description)</p>
