--- a/Sources/App/Modules/Blog/Templates/Frontend/Categories.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Categories.html
@@ -4,7 +4,7 @@
 ])
 #define(body):
 <div id="categories" class="wrapper w-full m:xl">
-    <header class="m:b:l center">
+    <header class="m:bottom:l center">
         <h1>#(head.title)</h1>
         <p>#(head.description)</p>
     </header>
