--- a/Sources/App/Modules/Blog/Templates/Frontend/Home.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Home.html
@@ -5,7 +5,7 @@
 #define(body):
 <div id="home" class="wrapper w:full m:xl">
 
-    <header class="m:b:l center">
+    <header class="m:bottom:l center">
         <h1>#(head.title)</h1>
         <p>#(head.description)</p>
     </header>
@@ -29,7 +29,7 @@
                         #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                         </time>
                     </p>
-                    <h3 class="m:zero m:b:xs">Getting started with SwiftIO</h3>
+                    <h3 class="m:zero m:bottom:xs">Getting started with SwiftIO</h3>
                     <p class="m:zero">SwiftIO is an electronic circuit board that runs Swift on the bare metal. It can control sensors, displays, lights, motors and more.</p>
                 </div>
             </a>
@@ -52,7 +52,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">Websockets for beginners using Vapor 4 and Vanilla JavaScript</h3>
+                        <h3 class="m:zero m:bottom:xs">Websockets for beginners using Vapor 4 and Vanilla JavaScript</h3>
                         <p class="m:zero">Learn how to create a websocket server using Swift & Vapor. Multiplayer game development using JavaScript in the browser.</p>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">#(post.title)</h3>
+                        <h3 class="m:zero m:bottom:xs">#(post.title)</h3>
                         <p class="m:zero">#(post.excerpt)</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">#(post.title)</h3>
+                        <h3 class="m:zero m:bottom:xs">#(post.title)</h3>
                         <p class="m:zero">#(post.excerpt)</p>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">#(post.title)</h3>
+                        <h3 class="m:zero m:bottom:xs">#(post.title)</h3>
                         <p class="m:zero">#(post.excerpt)</p>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">How to learn Swift as a beginner?</h3>
+                        <h3 class="m:zero m:bottom:xs">How to learn Swift as a beginner?</h3>
                         <p class="m:zero">Lorem ipsum dolor sit amet this is a longer description that can fit into 160 characters hopefully it'll be enought.</p>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">How to build macOS apps using only the Swift Package Manager?</h3>
+                        <h3 class="m:zero m:bottom:xs">How to build macOS apps using only the Swift Package Manager?</h3>
                         <p class="m:zero">In this article we're going to create a macOS application without ever touching an Xcode project file, but only working with SPM.
                         
 </p>
@@ -198,7 +198,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">What's new in Leaf 4 (Tau)?</h3>
+                        <h3 class="m:zero m:bottom:xs">What's new in Leaf 4 (Tau)?</h3>
                         <p class="m:zero">Everything you should know about the upcoming Leaf template engine update and how to migrate your Vapor / Swift codebase.</p>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">10 short advices that will make you a better Vapor developer right away</h3>
+                        <h3 class="m:zero m:bottom:xs">10 short advices that will make you a better Vapor developer right away</h3>
                         <p class="m:zero">As a beginner server side Swift developer you'll face many obstackles. I'll show you how to avoid the most common ones.</p>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">#(post.title)</h3>
+                        <h3 class="m:zero m:bottom:xs">#(post.title)</h3>
                         <p class="m:zero">#(post.excerpt)</p>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                             #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                             </time>
                         </p>
-                        <h3 class="m:zero m:b:xs">#(post.title)</h3>
+                        <h3 class="m:zero m:bottom:xs">#(post.title)</h3>
                         <p class="m:zero">#(post.excerpt)</p>
                     </div>
                 </div>
