--- a/Sources/App/Modules/Blog/Templates/Frontend/Post.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Post.html
@@ -14,7 +14,7 @@
                     #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                 </time>
             </p>
-            <h1 class="m:b:s">#(post.title)</h1>
+            <h1 class="m:bottom:s">#(post.title)</h1>
             <p class="m:zero">#(post.excerpt)</p>
         </header>
     </div>
