--- a/Sources/App/Modules/Blog/Templates/Frontend/SinglePost.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/SinglePost.html
@@ -12,7 +12,7 @@
                 #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
                 </time>
             </p>
-            <h2 class="m:zero m:b:xs">#(post.title)</h2>
+            <h2 class="m:zero m:bottom:xs">#(post.title)</h2>
             <p class="m:zero">#(post.excerpt)</p>
         </div>
     </a>
