--- a/Sources/App/Modules/Redirect/Templates/Admin/Redirects/Edit.html
+++ b/Sources/App/Modules/Redirect/Templates/Admin/Redirects/Edit.html
@@ -11,6 +11,5 @@
     #inline("Admin/Fields/Selection")
 
 #enddefine
-#let(title = "Redirects")
-#let(form = ["key": "redirects", "id": edit.id])
+#let(form = ["list": "redirects", "key": "redirect", "id": edit.id])
 #inline("Admin/Form")
