--- a/Sources/App/Modules/Static/Templates/Admin/Pages/Edit.html
+++ b/Sources/App/Modules/Static/Templates/Admin/Pages/Edit.html
@@ -14,6 +14,5 @@
     #inline("Admin/Fields/Textarea")
 
 #enddefine
-#let(title = "Pages")
-#let(form = ["key": "pages", "id": edit.id])
+#let(form = ["list": "pages", "key": "page", "id": edit.id])
 #inline("Admin/Form")
