--- a/Sources/App/Modules/User/Templates/Admin/Users/Edit.html
+++ b/Sources/App/Modules/User/Templates/Admin/Users/Edit.html
@@ -8,6 +8,5 @@
     #inline("Admin/Fields/Text")
 
 #enddefine
-#let(title = "Users")
-#let(form = ["key": "user", "id": edit.id])
+#let(form = ["list": "users", "key": "user", "id": edit.id])
 #inline("Admin/Form")
