--- a/Sources/App/Modules/Admin/Templates/Fields/Textarea.html
+++ b/Sources/App/Modules/Admin/Templates/Fields/Textarea.html
@@ -1,4 +1,4 @@
-<section class="m:b">
+<section class="m:bottom">
     <label for="#(field.id)">#(field.label ?? field.id.capitalized())</label>
     <textarea name="#(field.id)" class="#(field.size)">#(field.data.value)</textarea>
     #if(field.data.error != nil):
