--- a/Sources/App/Modules/Static/Templates/Admin/Pages/List.html
+++ b/Sources/App/Modules/Static/Templates/Admin/Pages/List.html
@@ -1,23 +1,19 @@
 #define(css):
 @media (min-width: 600px) {
-    .tr .td:nth-of-type(1), .th .td:nth-of-type(1) {
-        margin-left: 16px;
-        margin-right: 16px;
-    }
     .table .th, .table .tr {
         grid-template-columns: 1fr 64px 96px;
     }
 }
 #enddefine
 #define(th):
-    <div class="td td:left">#let(link = ["key": "title"])#inline("Admin/SortLink")</div>
+    <div class="td td:left m:horizontal:s">#let(link = ["key": "title"])#inline("Admin/SortLink")</div>
     <div class="td td:center">Edit</div>
     <div class="td td:center">Delete</div>
 #enddefine
 #define(tr):
     #for(item in list.items):
 <div class="tr">
-    <div class="td td:left"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></div>
+    <div class="td td:left m:horizontal:s"><a href="#($req.url.path)#(item.id)/">#(item.title)</a></div>
     #inline("Admin/Actions")
 </div>
     #endfor
